<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- General UI -->

	<string name="app_name">LifeLine</string>
	<string name="info">Info</string>

	<!-- Preferences -->

	<string name="settings_category_general">General</string>
	<string name="settings_active">Active</string>
	<string name="settings_active_on">LifeLine is active.</string>
	<string name="settings_active_off">Activates the LifeLine.</string>
	<string name="settings_autostart">Autostart</string>
	<string name="settings_autostart_on">LifeLine will start automatically.</string>
	<string name="settings_autostart_off">LifeLine will not start automatically.</string>

	<string name="settings_display">Display</string>
	<string name="settings_color">Color</string>
	<string name="settings_color_summary">Color of the LifeLine.</string>

    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>

	<!-- Debug Output -->

	<string name="debug_started">LifeLine started</string>
	<string name="debug_stopped">LifeLine stopped</string>
	<string name="debug_pref_changed">Preferences changed.</string>

    <string name="settings_about">About</string>
    <string name="version">Version</string>
    <string name="authors">Authors</string>

    <string name="version_name">1.1</string>
    <string name="version_code">1100</string>
    <string name="author_name">Jan Auer, Tobias Curth</string>
    <string name="settings_advanced_colors">Advanced colors</string>
    <string name="settings_advanced_colors_on">Additional colors based on battery status</string>
    <string name="settings_advanced_colors_off">Only the predefined color will be used</string>
</resources>
