<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
			android:key="settings_general"
			android:title="@string/settings_category_general">

		<CheckBoxPreference
				android:key="active"
				android:title="@string/settings_active"
				android:summaryOn="@string/settings_active_on"
				android:summaryOff="@string/settings_active_off"
				android:defaultValue="false"/>

		<CheckBoxPreference
				android:key="autostart"
				android:title="@string/settings_autostart"
				android:summaryOn="@string/settings_autostart_on"
				android:summaryOff="@string/settings_autostart_off"
				android:defaultValue="false"
				android:dependency="active"/>

	</PreferenceCategory>

	<PreferenceCategory
			android:key="category_display"
			android:title="@string/settings_display"
			android:dependency="active">

		<ListPreference
				android:key="color"
				android:title="@string/settings_color"
				android:summary="@string/settings_color_summary"
				android:entries="@array/color_names"
				android:entryValues="@array/color_values"
				android:defaultValue="#33B5E5"/>

	</PreferenceCategory>

    <PreferenceCategory
        android:key="category_about"
        android:title="@string/settings_about"
       >
        <Preference
            android:title="@string/version"
            android:summary="@string/version_name"
            android:selectable="false"
            />
        <Preference
            android:title="@string/authors"
            android:summary="@string/author_name"
            android:selectable="false"
            />
    </PreferenceCategory>
</PreferenceScreen>
